Fixed small bug where slider bullet could not be clicked because de image was overlapping

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -150,6 +150,7 @@
 					position: absolute;
 					overflow: visible;
 					background-repeat: no-repeat;
+					pointer-events: none;
 				}
 				#uvp-image { 
 					background-image: url(uvpbox.png); 
